Fix env var prefixes in documentation

--- a/.env.example
+++ b/.env.example
@@ -13,10 +13,10 @@
 # or set the appropriate environment variables.
 # This will automatically override the default values.
 
-LQ_CHANNEL_ID: "638b815b4d55b470d9d6fa19",
-RL_CHANNEL_NAME: "litdevs_general",
-RL_SERVER_ADDRESS: "localhost",
-LQ_WEBHOOK_ADDRESS: "lq-gateway.litdevs.org",
-LQ_SERVER_ADDRESS: "lq.litdevs.org",
-LQ_USER_ID: "645f08ca5bb68883fe2046c4"
+LQB_LQ_CHANNEL_ID: "638b815b4d55b470d9d6fa19",
+LQB_RL_CHANNEL_NAME: "litdevs_general",
+LQB_RL_SERVER_ADDRESS: "localhost",
+LQB_LQ_WEBHOOK_ADDRESS: "lq-gateway.litdevs.org",
+LQB_LQ_SERVER_ADDRESS: "lq.litdevs.org",
+LQB_LQ_USER_ID: "645f08ca5bb68883fe2046c4"
 LQB_TOKEN: "CHANGEME"
