--- a/.github/workflows/pyinstaller-MacOS.yml
+++ b/.github/workflows/pyinstaller-MacOS.yml
@@ -18,6 +18,6 @@ jobs:
         uses: sayyid5416/pyinstaller@v1
         with:
           python_ver: '3.11'
-          spec: 'client.py'
+          spec: 'lightquark-bridge.py'
           requirements: 'requirements.txt'
           upload_exe_with_name: 'Lightquark_Relinked_Bridge'
